B-F Sandbox Full-Backup/src/objects/Account_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bottle_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottle Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bottle_Price__c</fullName>
        <label>Bottle Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand Name</description>
        <label>Brand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Double_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Double_Price__c</fullName>
        <label>Double Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drink_Price_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drink Price Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drink_Price__c</fullName>
        <description>Drink Price</description>
        <label>Drink Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facings_Delta_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just to serve as flag</description>
        <label>Facings Delta Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facings_Delta__c</fullName>
        <description>Increase or Decrease in Facings &quot;From the last OV&quot;
i.e. Prior OV Facings = 3 Current = 4 Delta = 1
i.e. Prior OV Facings = 4 Current = 3 Delta = -1</description>
        <inlineHelpText>Increase or Decrease in Facings &quot;From the last OV&quot;
i.e. Prior OV Facings = 3 Current = 4 Delta = 1
i.e. Prior OV Facings = 4 Current = 3 Delta = -1</inlineHelpText>
        <label>Facings Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facings__c</fullName>
        <label>Facings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Outlet_Visit_Date__c</fullName>
        <label>Last Outlet Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Outlet_Visit_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Outlet Visit</label>
        <referenceTo>Outlet_Visit__c</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Listing_Date__c</fullName>
        <description>Same here this date should only be update on the initial list of the Product.</description>
        <label>New Listing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>First time entry only - This box will only be check &quot;One&quot; time of first (Initial) entry</description>
        <label>New Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Account Products</relationshipLabel>
        <relationshipName>Account_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shelf_Move_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose just to serve as a flag</description>
        <label>Shelf Move Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shelf_Move__c</fullName>
        <description>Shelf Move (Delta)  1 = Lowest ....5 = Highest
i.e Position Change from 1 to 2 = 1
i.e Position Change from 2 to 1 = -1</description>
        <label>Shelf Move</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shelf__c</fullName>
        <label>Shelf</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Account Product</label>
    <nameField>
        <displayFormat>AP-{0}</displayFormat>
        <label>Account Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>